flapivor/tests/m1/hopix/parser/bad/115-while-2.hopix
val main =
  while True {
    while {
      x := !x - 1
    }
  }